--- a/Helloworld/Helloworld.vcxproj.filters
+++ b/Helloworld/Helloworld.vcxproj.filters
@@ -15,8 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="Source.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="FlightData.txt" />
   </ItemGroup>
 </Project>
